...
                    android:gravity="center"
                    android:text="@string/log"
                    android:textColor="@color/sl_btn"
                    android:textSize="@dimen/text_size_5"/>

                <TextView
                    android:id="@+id/tv_speaker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mute"
                    android:textColor="@color/sl_btn"
                    android:textSize="@dimen/text_size_5"/>

                <TextView
                    android:id="@+id/tv_publish_settings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/publish_setting"
                    android:textColor="@color/sl_btn"
                    android:textSize="@dimen/text_size_5"/>

                <TextView
                    android:id="@+id/tv_publish_control"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/sl_btn"
                    android:textSize="@dimen/text_size_5"/>

                <TextView
                    android:id="@+id/tv_close"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/close"
                    android:textColor="@color/colorPrimary"
...
