...

    <string name="portrait_mode">Portrait Mode</string>
    <string name="landscape_mode">Landscape Mode</string>
    <string name="select_capture_orientation">Select Capture Orientation</string>

    <!--broadcast-->
    <string name="hint">Hint</string>
    <string name="someone_is_requesting_to_broadcast_allow"><xliff:g id="value">%1$s</xliff:g>&#160;is requesting to broadcast, allow?</string>
    <string name="Allow">Allow</string>
    <string name="Deny">Deny</string>
    <string name="your_request_has_been_denied">your request has been denied!</string>
    <string name="got_it">got it</string>
    <string name="do_you_really_want_to_leave">Do you really want to leave?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="request_room_list_timeout">Request Room List Timeout</string>

    <!--log-->
    <string name="someone_is_requesting_to_broadcast"><xliff:g id="value">%1$s</xliff:g>:&#160;is requesting to broadcast</string>
    <string name="request_of_broadcast_has_been_allowed"><xliff:g id="value">%1$s</xliff:g>:&#160;request of broadcast has been allowed</string>
...
